--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
-   
-   
-  
-    <link href="css/styles.scss" rel="stylesheet">   
-    <link href="css/utilities/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">  
+    <link href="public/css/styles.css" rel="stylesheet">   
+    <link href="public/css/aos.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <h1>mon projet</h1>
-    <script src="js/jquery.3.2.1.min.js"></script>    
-    <script src="js/aos.js"></script>
-    <script src="js/main.js"></script>
+    <script src="public/js/jquery.3.2.1.min.js"></script>    
+    <script src="public/js/aos.js"></script>
+    <script src="public/js/main.js"></script>
 </body>
 </html>
