--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>mon projet</h1>
+    <h1>mon premier projet</h1>
     <script src="public/js/jquery.3.2.1.min.js"></script>    
     <script src="public/js/aos.js"></script>
     <script src="public/js/main.js"></script>
