--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <h1>mon premier projet v1 </h1>
+    <h1>mon premier projet v1 </h1>
+    <h1>mon premier projet v1 </h1>
     <script src="public/js/jquery.3.2.1.min.js"></script>    
     <script src="public/js/aos.js"></script>
     <script src="public/js/main.js"></script>
