creation of the site skeleton

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
 <body>
     <header id="top">
-        <nav  class="navbar navbar-expand-md  fixed-top">
+        <nav  class="navbar navbar-expand-md navbar-light  fixed-top">
             <div class="container">                
                     <a class="navbar-brand" href="#top">OUMAIMA CREATION</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#collapsibleNavbar">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon text-secondary"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                         <ul class="navbar-nav">
@@ -40,21 +40,22 @@
             </div>
         </nav>
     </header>
-
+    
     <div class="page-content">
         <div class="profile-page">
             <div class="wrapper">
                 <div class="page-header page-header-small" filter-color="green">
                     <div class="page-header-image" data-parallax="true"
-                        style="background-image: url('public/images/cc-bg-1.jpg')"></div>
+                        style="background-image: url('public/images/cc-bg-1.jpg');"></div>
                     <div class="container">
                         <div class="content-center">
                             <div class="cc-profile-image">
                                 <a href="#"><img src="public/images/anthony.jpg" alt="Image" /></a>
                             </div>
-                            <div class="h2 title">Anthony Barnett</div>
-                            <p class="category text-white">Web Developer, Graphic Designer, Photographer</p><a
-                                class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
+                            <div class="h2 title">Oumaima El Obayid</div>
+                            <p class="category text-dark">Je suis intégratrice web, développeur Wordpress, et webdesigner freelance à Casablanca.
+                                Bienvenue sur mon portfolio!</p>
+                                <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
                                 data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#"
                                 data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
                         </div>
