creation of the site skeleton

--- a/index.html
+++ b/index.html
@@ -41,20 +41,19 @@
         </nav>
     </header>
     
-    <div class="page-content">
-        <div class="profile-page">
+    <div class="content">
+        <div class="content-profile">
             <div class="wrapper">
-                <div class="page-header page-header-small" filter-color="green">
-                    <div class="page-header-image" data-parallax="true"
-                        style="background-image: url('public/images/cc-bg-1.jpg');"></div>
+                <div class="page-header page-header-small" filter-color="green">                   
+                        <div class="parallax-window" data-parallax="scroll" data-image-src="public/images/cc-bg-1.jpg"></div>
+
                     <div class="container">
                         <div class="content-center">
-                            <div class="cc-profile-image">
+                            <div class="profile-img">
                                 <a href="#"><img src="public/images/anthony.jpg" alt="Image" /></a>
                             </div>
                             <div class="h2 title">Oumaima El Obayid</div>
-                            <p class="category text-dark">Je suis intégratrice web, développeur Wordpress, et webdesigner freelance à Casablanca.
-                                Bienvenue sur mon portfolio!</p>
+                            <h4 class="category text-18px text-light">Intégratrice web, Développeuse Wordpress, et webdesigner.</h4>
                                 <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
                                 data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#"
                                 data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
@@ -705,6 +704,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="public/js/main.js"></script>
+    <script src="public/js/parallax.min.js"></script>
 
 </body>
 
