--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 </head>
 
 <body>
-    <header id="top">
+    <header id="header">
         <nav  class="navbar navbar-expand-md navbar-light  fixed-top">
             <div class="container">                
-                    <a class="navbar-brand" href="#top">OUMAIMA CREATION</a>
+                    <a class="navbar-brand" href="#header">OUMAIMA CREATION</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#collapsibleNavbar">
                         <span class="navbar-toggler-icon text-secondary"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link " href="#top">ACCUEIL</a></li>
+                            <li class="nav-item"><a class="nav-link " href="#header">ACCUEIL</a></li>
                             <li class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="#competences">COMPETENCES</a></li>
