--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now
                                     UI Kit and FontAwesome, this modern and responsive design template is perfect to
                                     showcase your portfolio, skills and experience. <a
-                                        href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn
+                                        href="#" target="_blank">Learn
                                         More</a></p>
                             </div>
                         </div>
