--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-6">
-                                <div class="progress-container progress-primary"><span
+                                <div class="progress-container progress-primary">
+                                    <span
                                         class="progress-badge">HTML</span>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary" data-aos="progress-full"
