--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
                                 </svg>
                             </div>
                         </div>
-                    </div>                    
-                        <div class="container content-center">
-                            <div class="profile-img">
-                                <a href="#"><img src="public/images/anthony.jpg" alt="Image" /></a>
-                            </div>
-                            <div class="h2 title">Oumaima El Obayid</div>
-                            <h4 class="category text-18px text-light">Intégratrice web, Développeuse Wordpress, et
-                                webdesigner.</h4>
-                            <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
-                                data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#"
-                                data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                    </div>
+                    <div class="container content-center">
+                        <div class="profile-img">
+                            <a href="#"><img src="public/images/anthony.jpg" alt="Image" /></a>
                         </div>
-                   
+                        <div class="h2 title">Oumaima El Obayid</div>
+                        <h4 class="category text-18px text-light">Intégratrice web, Développeuse Wordpress, et
+                            webdesigner.</h4>
+                        <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
+                            data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#"
+                            data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                    </div>
+
                     <div class="section">
                         <div class="container">
                             <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#"
@@ -172,8 +172,7 @@
                                 <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.</p>
                                 <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now
                                     UI Kit and FontAwesome, this modern and responsive design template is perfect to
-                                    showcase your portfolio, skills and experience. <a
-                                        href="#" target="_blank">Learn
+                                    showcase your portfolio, skills and experience. <a href="#" target="_blank">Learn
                                         More</a></p>
                             </div>
                         </div>
@@ -214,13 +213,14 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="progress-container progress-primary">
-                                    <span
-                                        class="progress-badge">HTML</span>
+                                    <span class="progress-badge">HTML</span>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                             data-aos-offset="10" data-aos-duration="2000" role="progressbar"
                                             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                                            style="width: 80%;"></div><span class="progress-value">80%</span>
+                                            style="width: 80%;">
+                                        </div>
+                                        <span class="progress-value">80%</span>
                                     </div>
                                 </div>
                             </div>
