--- a/index.html
+++ b/index.html
@@ -225,12 +225,15 @@
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
+                                <div class="progress-container progress-primary">
+                                    <span class="progress-badge">CSS</span>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                             data-aos-offset="10" data-aos-duration="2000" role="progressbar"
                                             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                                            style="width: 75%;"></div><span class="progress-value">75%</span>
+                                            style="width: 75%;">
+                                        </div>
+                                        <span class="progress-value">75%</span>
                                     </div>
                                 </div>
                             </div>
