--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                                <div class="progress-container progress-primary"><span
-                                        class="progress-badge">JavaScript</span>
+                                <div class="progress-container progress-primary">
+                                    <span class="progress-badge">JavaScript</span>
                                     <div class="progress">
                                         <div class="progress-bar progress-bar-primary" data-aos="progress-full"
                                             data-aos-offset="10" data-aos-duration="2000" role="progressbar"
