--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav ">
-                        <li class="nav-item"><a class="nav-link text-light" href="#header">ACCUEIL</a></li>
-                        <li class="nav-item"><a class="nav-link text-light" href="#apropos">À PROPOS</a>
+                        <li class="nav-item"><a class="nav-link" href="#header">ACCUEIL</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-light" href="#competences">COMPETENCES</a></li>
-                        <li class="nav-item"><a class="nav-link text-light" href="#portfolio">PORTFOLIO</a>
+                        <li class="nav-item"><a class="nav-link" href="#competences">COMPETENCES</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-light" href="#experience">EXPERIENCES</a></li>
-                        <li class="nav-item"><a class="nav-link text-light" href="#contact">CONTACT</a>
+                        <li class="nav-item"><a class="nav-link" href="#experience">EXPERIENCES</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a>
                     </ul>
                 </div>
             </div>
