--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
 <body>
     <header id="header">
-        <nav class="navbar navbar-expand-md navbar-light  fixed-top">
+        <nav class="navbar navbar-expand-md navbar-light fixed-top">
             <div class="container">
-                <a class="navbar-brand text-light" href="#header">OUMAIMA CREATION</a>
+                <a class="logo" href="#header">OUMAIMA CREATION</a>
                 <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon text-secondary"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-                    <ul class="navbar-nav ">
-                        <li class="nav-item"><a class="nav-link" href="#header">ACCUEIL</a></li>
+                    <ul class="navbar-nav">
+                        <li class="nav-item "><a class="nav-link"  href="#header">ACCUEIL</a></li>
                         <li class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="#competences">COMPETENCES</a></li>
@@ -44,7 +44,7 @@
         <div class="content-profile">
             <div class="wrapper">
                 <div class="page-header page-header-small">
-                    <div class="parallax-window" data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
+                    <div class="parallax-window " data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
                         <div class="profile-bubbles">
                             <div class="bubbles-container">
                                 <svg class="bubbles" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 701 1024"
@@ -138,9 +138,10 @@
                         <div class="profile-img">
                             <a href="#"><img src="public/images/anthony.jpg" alt="Image" /></a>
                         </div>
-                        <div class="h2 title">Oumaima El Obayid</div>
-                        <h4 class="category text-18px text-light">Intégratrice web, Développeuse Wordpress, et
-                            webdesigner.</h4>
+                        <h1>Oumaima El Obayid</h1>
+                        <h4 class="category text-light">Intégratrice web, Développeuse Wordpress, et
+                            webdesigner.
+                        </h4>  
                         <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
                             data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#"
                             data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
