--- a/index - Copie.html
+++ b/index - Copie.html
@@ -18,7 +18,7 @@
 
 <body>
     <header id="header">
-        <nav class="navbar navbar-expand-md navbar-light  fixed-top">
+        <nav class="navbar navbar-expand-md navbar-light fixed-top">
             <div class="container">
                 <a class="logo" href="#header">OUMAIMA CREATION</a>
                 <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -45,8 +45,8 @@
             <div class="wrapper">
                 <div class="page-header page-header-small">
                     <div class="parallax-window " data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
-                        <div class="profile-bubbles ">
-                            <div class="bubbles-container ">
+                        <div class="profile-bubbles">
+                            <div class="bubbles-container">
                                 <svg class="bubbles" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 701 1024"
                                     style="overflow: visible;">
                                     <g class="bubbles-large" stroke-width="7">
@@ -136,7 +136,7 @@
                     </div>
                     <div class="container content-center">
                         <div class="profile-img">
-                            <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
+                            <a href="#"><img src="public/images/anthony.jpg" alt="Image" /></a>
                         </div>
                         <h1>Oumaima El Obayid</h1>
                         <h4 class="category text-light">Intégratrice web, Développeuse Wordpress, et
