--- a/index.html
+++ b/index.html
@@ -45,94 +45,20 @@
             <div class="wrapper">
                 <div class="page-header page-header-small">
                     <div class="parallax-window " data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
-                        <div class="profile-bubbles ">
-                            <div class="bubbles-container ">
-                                <svg class="bubbles" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 701 1024"
-                                    style="overflow: visible;">
-                                    <g class="bubbles-large" stroke-width="7">
-                                        <g>
-                                            <g transform="translate(10 940)">
-                                                <circle cx="35" cy="35" r="35" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(373 940)">
-                                                <circle cx="35" cy="35" r="35" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(408 940)">
-                                                <circle cx="35" cy="35" r="35" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(621 940)">
-                                                <circle cx="35" cy="35" r="35" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(179 940)">
-                                                <circle cx="35" cy="35" r="35" />
-                                            </g>
-                                        </g>
-                                    </g>
-
-                                    <g class="bubbles-small" stroke-width="4">
-                                        <g>
-                                            <g transform="translate(147 984)">
-                                                <circle cx="15" cy="15" r="15" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(255 984)">
-                                                <circle cx="15" cy="15" r="15" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(573 984)">
-                                                <circle cx="15" cy="15" r="15" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(429 984)">
-                                                <circle cx="15" cy="15" r="15" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(91 984)">
-                                                <circle cx="15" cy="15" r="15" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(640 984)">
-                                                <circle cx="15" cy="15" r="15" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(321 984)">
-                                                <circle cx="15" cy="15" r="15" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(376 984)">
-                                                <circle cx="15" cy="15" r="15" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(376 984)">
-                                                <circle cx="15" cy="15" r="15" />
-                                            </g>
-                                        </g>
-                                        <g>
-                                            <g transform="translate(497 984)">
-                                                <circle cx="15" cy="15" r="15" />
-                                            </g>
-                                        </g>
-                                    </g>
-
-                                </svg>
-                            </div>
-                        </div>
+                        <div class="bubble-ocean">
+                            <div class="bubble bubble--1"></div>
+                            <div class="bubble bubble--2"></div>
+                            <div class="bubble bubble--3"></div>
+                            <div class="bubble bubble--4"></div>
+                            <div class="bubble bubble--5"></div>
+                            <div class="bubble bubble--6"></div>
+                            <div class="bubble bubble--7"></div>
+                            <div class="bubble bubble--8"></div>
+                            <div class="bubble bubble--9"></div>
+                            <div class="bubble bubble--10"></div>
+                            <div class="bubble bubble--11"></div>
+                            <div class="bubble bubble--12"></div>
+                          </div>
                     </div>
                     <div class="container content-center">
                         <div class="profile-img">
