--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <header id="header">
         <nav class="navbar navbar-expand-md navbar-light  fixed-top">
             <div class="container">
-                <a class="logo" href="#header">OUMAIMA CREATION</a>
+                <a class="logo text-nowrap" href="#header">OUMAIMA CREATION</a>
                 <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon text-secondary"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+                <div class="collapse navbar-collapse text-nowrap  justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item "><a class="nav-link"  href="#header">ACCUEIL</a></li>
                         <li class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
@@ -58,6 +58,10 @@
                             <div class="bubble bubble--10"></div>
                             <div class="bubble bubble--11"></div>
                             <div class="bubble bubble--12"></div>
+                            <div class="bubble bubble--13"></div>
+                            <div class="bubble bubble--14"></div>
+                            <div class="bubble bubble--15"></div>
+                            <div class="bubble bubble--16"></div>
                           </div>
                     </div>
                     <div class="container content-center">
@@ -65,9 +69,9 @@
                             <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
                         </div>
                         <h1>Oumaima El Obayid</h1>
-                        <h4 class="category text-light">Intégratrice web, Développeuse Wordpress, et
+                        <h3 class="category text-light">Intégratrice web, Développeuse Wordpress, et
                             webdesigner.
-                        </h4>  
+                        </h3>  
                         <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
                             data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#"
                             data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
