--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
 
     <div class="content">
-        <div class="content-profile">
+        <div class="content-profile" >
             <div class="wrapper">
                 <div class="page-header page-header-small">
                     <div class="parallax-window " data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
@@ -62,13 +62,13 @@
                             <div class="bubble bubble--14"></div>
                             <div class="bubble bubble--15"></div>
                             <div class="bubble bubble--16"></div>
-                          </div>
+                        </div>
                     </div>
-                    <div class="container content-center">
-                        <div class="profile-img">
+                    <div class="container content-center" >
+                        <div class="profile-img" data-aos="fade-right" data-aos-duration = "400" data-aos-delay= "1000">
                             <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
                         </div>
-                        <h1>Oumaima El Obayid</h1>
+                        <h1 data-aos="zoom-in" data-aos-duration = "1000" data-aos-delay= "600">Oumaima El Obayid</h1>
                         <h3 class="category text-light">Intégratrice web, Développeuse Wordpress, et
                             webdesigner.
                         </h3>  
