--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div class="container content-center" >
-                        <div class="profile-img" data-aos="fade-right" data-aos-duration = "400" data-aos-delay= "1000">
+                        <div class="profile-img" data-aos="zoom-in" data-aos-duration = "2000" data-aos-delay= "1000">
                             <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
                         </div>
                         <h1 data-aos="zoom-in" data-aos-duration = "1000" data-aos-delay= "600">Oumaima El Obayid</h1>
