--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
                 <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon text-secondary"></span>
                 </button>
-                <div  class="collapse navbar-collapse text-nowrap  justify-content-end" id="collapsibleNavbar">
+                <div class="collapse navbar-collapse text-nowrap  justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav">
-                        <li id="link1" class="nav-item"><a  class="nav-link"  href="#header">ACCUEIL</a></li>
-                        <li id="link2" class="nav-item"><a  class="nav-link" href="#apropos">À PROPOS</a>
+                        <li id="link1" class="nav-item"><a class="nav-link" href="#header">ACCUEIL</a></li>
+                        <li id="link2" class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
                         </li>
-                        <li id="link3" class="nav-item"><a  class="nav-link link3" href="#competences">COMPETENCES</a></li>
-                        <li id="link4" class="nav-item"><a  class="nav-link link4" href="#portfolio">PORTFOLIO</a>
+                        <li id="link3" class="nav-item"><a class="nav-link link3" href="#competences">COMPETENCES</a>
                         </li>
-                        <li id="link5" class="nav-item"><a  class="nav-link link5" href="#experience">EXPERIENCES</a></li>
-                        <li id="link6" class="nav-item"><a  class="nav-link link6" href="#contact">CONTACT</a>
+                        <li id="link4" class="nav-item"><a class="nav-link link4" href="#portfolio">PORTFOLIO</a>
+                        </li>
+                        <li id="link5" class="nav-item"><a class="nav-link link5" href="#experience">EXPERIENCES</a>
+                        </li>
+                        <li id="link6" class="nav-item"><a class="nav-link link6" href="#contact">CONTACT</a>
                     </ul>
                 </div>
             </div>
@@ -41,7 +43,7 @@
     </header>
 
     <div class="content">
-        <div class="content-profile" >
+        <div class="content-profile">
             <div class="wrapper">
                 <div class="page-header page-header-small">
                     <div class="parallax-window " data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
@@ -64,23 +66,24 @@
                             <div class="bubble bubble--16"></div>
                         </div>
                     </div>
-                    <div class="container content-center" >
-                        <div class="profile-img" data-aos="zoom-in" data-aos-duration = "2000" data-aos-delay= "1000">
+                    <div class="container content-center">
+                        <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
                             <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
                         </div>
-                        <h1 data-aos="zoom-in" data-aos-duration = "1000" data-aos-delay= "600">Oumaima El Obayid</h1>
+                        <h1 data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">Oumaima El Obayid</h1>
                         <h3 class="category text-light">Intégratrice web, Développeuse Wordpress, et
                             webdesigner.
-                        </h3>  
+                        </h3>
                         <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
                             data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#"
                             data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
                     </div>
 
-                    <div class="section">
+                    <div class="section" id="social">
                         <div class="container">
-                            <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#"
-                                    rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
+                            <div class="button-container">
+                                <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip"
+                                    title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
                                 <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip"
                                     title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
                                 <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip"
@@ -487,7 +490,7 @@
                     </div>
                 </div>
             </div>
-        </div>             
+        </div>
         <div class="section" id="contact">
             <div class="cc-contact-information" style="background-image: url('public/images/staticmap.png')">
                 <div class="container">
@@ -579,8 +582,8 @@
     </footer>
 
 
-     
-  <a href="#header" class="back-to-top"><img src="./public/images/arrow_up.png"></i></a>
+
+    <a href="#header" class="back-to-top"><img src="./public/images/arrow_up.png"></i></a>
 
 
     <!-- DES ANIMATIONS AU SCROLL AVEC AOS -->
