--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
                 </button>
                 <div class="collapse navbar-collapse text-nowrap  justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav">
-                        <li id="link1" class="nav-item"><a class="nav-link" href="#header">ACCUEIL</a></li>
-                        <li id="link2" class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
+                        <li  class="nav-item"><a class="nav-link" href="#header">ACCUEIL</a></li>
+                        <li  class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
                         </li>
-                        <li id="link3" class="nav-item"><a class="nav-link link3" href="#competences">COMPETENCES</a>
+                        <li  class="nav-item"><a class="nav-link link3" href="#competences">COMPETENCES</a>
                         </li>
-                        <li id="link4" class="nav-item"><a class="nav-link link4" href="#portfolio">PORTFOLIO</a>
+                        <li  class="nav-item"><a class="nav-link link4" href="#portfolio">PORTFOLIO</a>
                         </li>
-                        <li id="link5" class="nav-item"><a class="nav-link link5" href="#experience">EXPERIENCES</a>
+                        <li  class="nav-item"><a class="nav-link link5" href="#experience">EXPERIENCES</a>
                         </li>
-                        <li id="link6" class="nav-item"><a class="nav-link link6" href="#contact">CONTACT</a>
+                        <li  class="nav-item"><a class="nav-link link6" href="#contact">CONTACT</a>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
-    <div class="content">
-        <div class="content-profile">
+    
+        <div class="content">
             <div class="wrapper">
-                <div class="page-header page-header-small">
+                <div class="content-profile">
                     <div class="parallax-window " data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
                         <div class="bubble-ocean">
                             <div class="bubble bubble--1"></div>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section" data-aos="fade-up" id="apropos">
+            <div class="sectionNav" data-aos="fade-up" id="apropos">
                 <div class="container">
                     <div class="card" data-aos="fade-up" data-aos-offset="8">
                         <div class="row">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section" id="competences">
+            <div class="sectionNav" id="competences">
                 <div class="container">
                     <div class="h4 text-center mb-4 title">Professional Skills</div>
                     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -224,7 +224,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section" id="portfolio">
+            <div class="sectionNav" id="portfolio">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 ml-auto mr-auto">
@@ -420,7 +420,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section" id="experience">
+            <div class="sectionNav" id="experience">
                 <div class="container cc-experience">
                     <div class="h4 text-center mb-4 title">Work Experience</div>
                     <div class="card">
@@ -494,7 +494,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section" id="contact">
+            <div class="sectionNav" id="contact">
                 <div class="cc-contact-information" style="background-image: url('public/images/staticmap.png')">
                     <div class="container">
                         <div class="cc-contact">
