--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sectionNav" data-aos="fade-up" id="apropos">
+            <div class="sectionNav mt-3" data-aos="fade-up" id="apropos">
                 <div class="container">
                     <div class="card" data-aos="fade-up" data-aos-offset="8">
                         <div class="row">
@@ -141,7 +141,7 @@
             </div>
             <div class="sectionNav" id="competences">
                 <div class="container">
-                    <div class="h4 text-center mb-4 title">Professional Skills</div>
+                    <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
                     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                         <div class="card-body">
                             <div class="row">
@@ -228,7 +228,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 ml-auto mr-auto">
-                            <div class="h4 text-center mb-4 title">Portfolio</div>
+                            <div class="h4 text-center mb-4 mt-4 title">Portfolio</div>
                             <div class="nav-align-center">
                                 <ul class="nav nav-pills nav-pills-primary" role="tablist">
                                     <li class="nav-item"><a class="nav-link active" data-toggle="tab"
@@ -242,7 +242,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-content gallery mt-5">
+                    <div class="tab-content gallery mb-4  mt-4">
                         <div class="tab-pane active" id="web-development">
                             <div class="ml-auto mr-auto">
                                 <div class="row">
@@ -422,7 +422,7 @@
             </div>
             <div class="sectionNav" id="experience">
                 <div class="container cc-experience">
-                    <div class="h4 text-center mb-4 title">Work Experience</div>
+                    <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                     <div class="card">
                         <div class="row">
                             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
@@ -498,10 +498,10 @@
                 <div class="cc-contact-information" style="background-image: url('public/images/staticmap.png')">
                     <div class="container">
                         <div class="cc-contact">
-                            <div class="row">
+                            <div id="contact" class="row">
                                 <div class="col-md-9">
                                     <div class="card mb-0" data-aos="zoom-in">
-                                        <div class="h4 text-center title">Contact Me</div>
+                                        <div class="h4 text-center mb-4 title mt-4 ">Contact Me</div>
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="card-body">
@@ -602,6 +602,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="public/js/main.js"></script>
         <script src="public/js/parallax.min.js"></script>
+        
 
 </body>
 
