--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header id="header">
+    <header class="section" id="header">
         <nav class="navbar navbar-expand-md navbar-light  fixed-top">
             <div class="container">
                 <a class="logo text-nowrap" href="#header">OUMAIMA CREATION</a>
@@ -47,7 +47,7 @@
         <div class="content">
             <div class="wrapper">
                 <div class="content-profile">
-                    <div class="parallax-window " data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
+                    <div class="welcom parallax-window" data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
                         <div class="bubble-ocean">
                             <div class="bubble bubble--1"></div>
                             <div class="bubble bubble--2"></div>
@@ -80,7 +80,7 @@
                             data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
                     </div>
 
-                    <div class="section" id="social">
+                    <div  id="social">
                         <div class="container">
                              <span data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600"><a href="#" class="fa fa-facebook" ></a></span>
                              <span data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600"><a href="#" class="fa fa-twitter"></a></span>		
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sectionNav mt-3" data-aos="fade-up" id="apropos">
+            <div class="section mt-3" data-aos="fade-up" id="apropos">
                 <div class="container">
                     <div class="card" data-aos="fade-up" data-aos-offset="8">
                         <div class="row">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sectionNav" id="competences">
+            <div class="section" id="competences">
                 <div class="container">
                     <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
                     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -224,7 +224,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sectionNav" id="portfolio">
+            <div class="section" id="portfolio">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6 ml-auto mr-auto">
@@ -420,7 +420,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sectionNav" id="experience">
+            <div class="section" id="experience">
                 <div class="container cc-experience">
                     <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                     <div class="card">
@@ -494,7 +494,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sectionNav" id="contact">
+            <div class="section" id="contact">
                 <div class="cc-contact-information" style="background-image: url('public/images/staticmap.png')">
                     <div class="container">
                         <div class="cc-contact">
