--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <nav class="navbar navbar-expand-md navbar-light  fixed-top">
             <div class="container">
                 <a class="logo text-nowrap" href="#header">OUMAIMA CREATION</a>
-                <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon text-secondary"></span>
                 </button>
-                <div class="collapse navbar-collapse text-nowrap  justify-content-end" id="collapsibleNavbar">
+                <div class="collapse  text-nowrap  justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li  class="nav-item"><a class="nav-link" href="#header">ACCUEIL</a></li>
                         <li  class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
