--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon text-secondary"></span>
                 </button>
-                <div class="collapse  text-nowrap  justify-content-end" id="collapsibleNavbar">
+                <div class="collapse navbar-collapse text-nowrap  justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li  class="nav-item"><a class="nav-link" href="#header">ACCUEIL</a></li>
                         <li  class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
