--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="section" id="header">
         <nav class="navbar navbar-expand-md navbar-light  fixed-top">
             <div class="container">
-                <a class="logo text-nowrap" href="#header">OUMAIMA CREATION</a>
+                <a class="logo text-nowrap" href="#header">OUMCREATION</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon text-secondary"></span>
                 </button>
