--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
                             <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
                         </div>
-                        <h1 data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">Oumaima El Obayid</h1>
+                        <span data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">Oumaima El Obayid</span>
                         <h3 class="category text-light">Intégratrice web, Développeuse Wordpress, et
                             webdesigner.
                         </h3>
