--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="section" id="header">
-        <nav class="navbar navbar-expand-md navbar-light  fixed-top">
+        <nav class="navbar navbar-expand-md   fixed-top">
             <div class="container">
                 <a class="logo text-nowrap" href="#header">OUMCREATION</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -37,6 +37,7 @@
                         <li  class="nav-item"><a class="nav-link link5" href="#experience">EXPERIENCES</a>
                         </li>
                         <li  class="nav-item"><a class="nav-link link6" href="#contact">CONTACT</a>
+                            <div class="dot"></div>
                     </ul>
                 </div>
             </div>
