--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="section" id="header">
-        <nav class="navbar navbar-expand-md   fixed-top">
+        <nav class="navbar navbar-expand-md fixed-top">
             <div class="container">
                 <a class="logo text-nowrap" href="#header">OUMCREATION</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -30,14 +30,14 @@
                         <li  class="nav-item"><a class="nav-link" href="#header">ACCUEIL</a></li>
                         <li  class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
                         </li>
-                        <li  class="nav-item"><a class="nav-link link3" href="#competences">COMPETENCES</a>
+                        <li  class="nav-item"><a class="nav-link" href="#competences">COMPETENCES</a>
                         </li>
-                        <li  class="nav-item"><a class="nav-link link4" href="#portfolio">PORTFOLIO</a>
+                        <li  class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a>
                         </li>
-                        <li  class="nav-item"><a class="nav-link link5" href="#experience">EXPERIENCES</a>
+                        <li  class="nav-item"><a class="nav-link" href="#experience">EXPERIENCES</a>
                         </li>
-                        <li  class="nav-item"><a class="nav-link link6" href="#contact">CONTACT</a>
-                            <div class="dot"></div>
+                        <li  class="nav-item"><a class="nav-link" href="#contact">CONTACT</a>
+                         
                     </ul>
                 </div>
             </div>
