--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <div class="bubble bubble--16"></div>
                         </div>
                     </div>
-                    <div class="container content-center">
+                    <div class="container content-profile-center">
                         <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
                             <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
                         </div>
