--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                         <h3 class="category text-light">Intégratrice web, Développeuse Wordpress, et
                             webdesigner.
                         </h3>
-                        <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
-                            data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#"
-                            data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+                        <a class="try" href="#contact" data-aos="zoom-in"
+                            data-aos-anchor="data-aos-anchor"><div>Hire Me</div> </a><a class="try"  class="btn btn-primary" href="#"
+                            data-aos="zoom-in" data-aos-anchor="data-aos-anchor"><span>Download CV</span> </a>
                     </div>
 
                     <div  id="social">
