--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
                     </div>
                     <span class="name" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">Oumaima El Obayid</span>
-                    <h3 class="category text-light">Intégratrice web, Développeuse Wordpress, et
+                    <h3 class="category">Intégratrice web, Développeuse Wordpress, et
                         webdesigner.
                     </h3>
                     <div class="twoButtons">
