--- a/index.html
+++ b/index.html
@@ -72,28 +72,24 @@
                     <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
                         <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
                     </div>
-                    <span class="name" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">Oumaima El Obayid</span>
+                    <span class="name" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">Oumaima El
+                        Obayid</span>
                     <h3 class="category">Intégratrice web, Développeuse Wordpress, et
-                        webdesigner.
+                        webdesigner
                     </h3>
-                    <div class="twoButtons">
-                        <div>
-                            <button class="try">
-                                <span class="text"><a class="text" href="#contact">Hire Me</a></span>
-                            </button>
-                            <button class="try">
-                                <span class="text"><a class="text" href="#">My CV</a></span>
-                            </button>
-                        </div>
+                    <div class="container twoButtons">
+                            <a  href="#contact">
+                                <span>Hire <br> Me</span> 
+                                <img src="public/images/bubbleBtn.png" alt="contact" />
+                            </a>  
+                            <a  href="#">
+                                <span>My <br> CV</span> 
+                                <img src="public/images/bubbleBtn.png" alt="contact" />
+                            </a>                         
+                        
+
                     </div>
-                    <!-- <div class="twoButtons">
-                        <button data-aos="zoom-in" data-aos-anchor="data-aos-anchor">
-                            <a class="text" href="#contact">Hire Me</a>
-                        </button>
-                        <button href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">
-                            <a class="text" href="#">My CV</a>
-                        </button>
-                    </div> -->
+                   
                 </div>
 
                 <div id="social">
