--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                     </h3>
                     <div class="container twoButtons">
                             <a  href="#contact">
-                                <span>Hire <br> Me</span> 
+                                <span>HIRE <br> ME</span> 
                                 <img src="public/images/bubbleBtn.png" alt="contact" />
                             </a>  
                             <a  href="#">
-                                <span>My <br> CV</span> 
+                                <span>MY <br> CV</span> 
                                 <img src="public/images/bubbleBtn.png" alt="contact" />
                             </a>                         
                         
